# blurscan

./: .gitignore  DESIGN.md  LICENSE  LOOP.md  MANUAL.md  README.md  TESTING.md  pyproject.toml
.github/workflows/: ci.yml
blurscan/: __init__.py  cache.py  classifier.py  cli.py  loader.py  metrics.py  models.py  pipeline.py  thumbs.py
blurscan/actions/: __init__.py  quarantine.py  report.py  tag.py
blurscan/actions/review/: __init__.py  heatmap.py  server.py  store.py
blurscan/actions/review/static/: app.js  index.html  styles.css
blurscan/detectors/: __init__.py  base.py  laplacian.py  ml.py  ml_head.npz  motion.py
prompt-analysis/: report1.md  report2-retrospective.md
scripts/: build_corpus.py  build_corpus_manifest.py  contact_sheet.py  fetch_corpus.py  finalize_corpus.py  train_ml.py
test_samples/heic_corpus/: ATTRIBUTION.md  manifest.csv
test_samples/raw_corpus/: ATTRIBUTION.md  manifest.csv
test_samples/web_corpus/: ATTRIBUTION.md  REVIEW.md  manifest.csv
tests/: README.md  __init__.py  conftest.py  test_cache.py  test_classifier.py  test_cli.py  test_corpus_manifest.py  test_integration.py  test_loader.py  test_loader_heic.py  test_loader_raw.py  test_metrics.py  test_ml.py  test_models.py  test_motion.py  test_parallel.py  test_pipeline.py  test_quarantine.py  test_report.py  test_review_heatmap.py  test_review_server.py  test_review_spa.py  test_smoke.py  test_tag.py
