[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blurscan"
version = "0.1.0"
description = "Detect blurry images in a photo collection"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "yvanboily" }]
dependencies = [
  "numpy>=1.24",
  "opencv-python-headless>=4.8",
  "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "mypy>=1.8",
  "pytest>=8.0",
]

[project.scripts]
blurscan = "blurscan.cli:main"

[tool.setuptools.packages.find]
include = ["blurscan*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
# Target 3.12 so numpy 2.x's PEP 695 stubs parse. Runtime min is still 3.11
# (requires-python); ruff's py311 target guards our code against 3.12-only syntax.
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
