[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blurscan"
version = "0.1.0"
description = "Detect blurry images in a photo collection"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "yvanboily" }]
dependencies = [
  "numpy>=1.24",
  "opencv-python-headless>=4.8",
  "pillow>=10.0",
  "pillow-heif>=0.13",
  "rawpy>=0.18",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "mypy>=1.8",
  "pytest>=8.0",
]
ml = [
  "torch>=2.0",
  "torchvision>=0.15",
]

[project.scripts]
blurscan = "blurscan.cli:main"

[tool.setuptools.packages.find]
include = ["blurscan*"]

[tool.setuptools.package-data]
"blurscan.detectors" = ["*.npz"]

[tool.ruff]
line-length = 100
target-version = "py311"
# scripts/ holds standalone dev utilities (e.g. corpus builder), not shipped code.
extend-exclude = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
# Target 3.12 so numpy 2.x's PEP 695 stubs parse. Runtime min is still 3.11
# (requires-python); ruff's py311 target guards our code against 3.12-only syntax.
python_version = "3.12"
strict = true
ignore_missing_imports = true

# rawpy ships partial type info that omits runtime attrs (ThumbFormat, LibRaw*
# errors); treat it as untyped rather than chase incomplete stubs.
[[tool.mypy.overrides]]
module = ["rawpy", "rawpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
